update credential service
